<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.Parte3"
    tools:context="com.example.roberto.actividaddint3.MainActivityFragment"

    tools:showIn="@layout/activity_main">

    /**
    * En todos textos de los botones, textos, y textos editables, le paso el contenido por un string
    */

    <TextView
        android:id="@+id/textView3"
        android:layout_width="339dp"
        android:layout_height="71dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/btnENVIAR"
        android:textColorHighlight="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="2dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit3"
        android:textColor="@color/color3"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
