<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roberto.actividaddint3.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:theme="@style/AppTheme.Parte2"
    >
    /**
    * En todos textos de los botones, textos, y textos editables, le paso el contenido por un string
    */

    <TextView
        android:id="@+id/textView2"
        android:layout_width="248dp"
        android:layout_height="58dp"
        android:layout_marginBottom="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txt2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnCOMENTAR"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="7dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="251dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit2"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
